# AdventOfCode2024

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/lib/day_1/: CMakeLists.txt
src/lib/day_1/include/day_1/: common.hpp
src/lib/day_1/src/: common.cpp  part_1.cpp  part_2.cpp
